--- a/css/media.css
+++ b/css/media.css
@@ -32,6 +32,12 @@
   .title--lines {
     padding: 25px 0;
   }
+  .form__field {
+    margin-bottom: 30px;
+  }
+  .form__field strong, .form__field input, .form__field textarea {
+    font-size: 16px;
+  }
   .hero__info {
     padding: 40px;
     border-radius: 44px;
@@ -107,6 +113,18 @@
   }
   .footer__inner {
     padding: 20px 30px;
+  }
+  .modal__box {
+    max-width: 550px;
+  }
+  .modal__close {
+    width: 60px;height: 60px;
+  }
+  .modal__title {
+    font-size: 22px;
+  }
+  .modal .paragraph {
+    font-size: 16px;
   }
 }
 
@@ -278,6 +296,13 @@
     padding: 0 18px;
     font-size: 14px;
   }
+  .form__field {
+    margin-bottom: 20px;
+  }
+  .form__field input {
+    height: 48px;
+    line-height: 48px;
+  }
   .hero__info {
     right: -20px;
     padding: 25px;
@@ -323,6 +348,24 @@
   }
   .desc__group-item:not(:last-child) {
     margin-right: 20px;
+  }
+  .modal__box {
+    max-width: 480px;
+    padding: 50px 30px;
+    border-radius: 40px;
+  }
+  .modal__close {
+    margin-top: -4px;
+    width: 40px;height: 40px;
+    background-size: 60% !important;
+    top: auto;left: auto;right: 0;bottom: 100%;
+  }
+  .modal__title {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  .modal .paragraph {
+    font-size: 14px;
   }
 }
 
@@ -499,6 +542,9 @@
   }
   .footer__inner {
     padding: 0;
+  }
+  .modal__box {
+    padding: 40px 15px;
   }
 }
 
